# llama.cpp

cmake/: llama-config.cmake.in
common/: CMakeLists.txt  arg.cpp  common.cpp  common.h  console.cpp  console.h
common/toolcall/: cmpmessages.hpp  cmpmessages2.hpp  cmpsse.hpp  cmptransport.hpp  cmptransport_usage.cpp  handler.cpp  handler.hpp  mcp_messages.cpp  mcp_messages.hpp  mcp_sse_transport.cpp  mcp_sse_transport.hpp  mcp_stdio.hpp  mcp_transport.hpp  mcpmessages.cpp
examples/main/: main.cpp
tools/main/: CMakeLists.txt  console_display_renderer.cpp  console_display_renderer.h  console_manager.cpp  console_manager.h  conversation.cpp  conversation.h  display.cpp  display.h  display_renderer.h  main.cpp
